--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
   </div>
 </div>
 
-<script src="/vendor.js"></script>
-<script src="/app.js"></script>
+<script src="vendor.js"></script>
+<script src="app.js"></script>
 <script>require('initialize');</script>
 
 </body>
