--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <h4 class="ui header">We are working on</h4>
           <p>
             We are working on showing the current bets in page.
-            Unfortunately the peercoin block explorers API's have issues to decently return the balances.
+            Unfortunately the Peercoin block explorers API's have issues to decently return the balances.
           </p>
           <h4 class="ui header">Terms of Service</h4>
           <p>
