--- a/index.html
+++ b/index.html
@@ -188,19 +188,19 @@
         <div class="sixteen wide column">
           <h4 class="ui header">How it works</h4>
           <p>
-            Users place their bets by sending Peercoins to apropriate address.
+            Users place their bets by sending Peercoins to appropriate address.
             Each address now represent a pot.
             Among three pots per game only one can win as bets are for the regular time soccer game only (90 minutes + extra time).
             Soccer game can end with: home win, guest win or draw.
-            The house (Peerbet) takes the Peercoins from both loosing pots, deducts the 5% house fee and distributes the winnings proportionaly to input to all the bettors in winning pool.
+            The house (Peerbet) takes the Peercoins from both loosing pots, deducts the 5% house fee and distributes the winnings proportionally to input to all the bettors in the winning pool.
             Users from the winning pot can expect the winning to be distributed within 4h after the regular time of the game has ended.
-            Payment will be sent on the address of the largest input of the bet transaction.
+            Payment will be sent to the address of the largest input of the bet transaction.
             Bets are accepted as long as they are included in the block that is issued before the game starts.
             All the bets that came after will be returned to sender but with five times the fee (0.05).
           </p>
           <h4 class="ui header">We are working on</h4>
           <p>
-            We are working on showing the current bets in page.
+            We are working on showing the current bets in page and in realtime.
             Unfortunately the Peercoin block explorers API's have issues to decently return the balances.
           </p>
           <h4 class="ui header">Terms of Service</h4>
