--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             Users from the winning pot can expect the winning to be distributed within 4h after the regular time of the game has ended.
             Payment will be sent to the address of the largest input of the bet transaction.
             Bets are accepted as long as they are included in the block that is issued before the game starts.
-            All the bets that came after will be returned to sender but with five times the fee (0.05).
+            All the bets that came after will be returned to sender but with five times the fee (0.05). Make sure you own the keys of the address you use, do not use the exchanges.
           </p>
           <h4 class="ui header">We are working on</h4>
           <p>
