--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             Each address now represent a pot.
             Among three pots per game only one can win as bets are for the regular time soccer game only (90 minutes + extra time).
             Soccer game can end with: home win, guest win or draw.
-            The house (Peerbet) takes the Peercoins from both loosing pots, deducts the 5% house fee and distributes the winnings proportionally to input to all the bettors in the winning pool.
+            The house (Peerbet) takes the Peercoins from both losing pots, deducts the 5% house fee and distributes the winnings proportionally to input to all the bettors in the winning pool.
             Users from the winning pot can expect the winning to be distributed within 4h after the regular time of the game has ended.
             Payment will be sent to the address of the largest input of the bet transaction.
             Bets are accepted as long as they are included in the block that is issued before the game starts.
