--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             Payment will be sent to the address of the largest input of the bet transaction.
             Bets are accepted as long as they are included in the block that is issued before the game starts.
             All the bets that came after will be returned to sender but with five times the fee (0.05). Make sure you own the keys of the address you use, do not use the exchanges.
+            There is no minimum or maximum bet size.
           </p>
           <h4 class="ui header">We are working on</h4>
           <p>
