--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properties -->
-  <title>Peerbet</title>
+  <title>Peerbet - No nonsense sports betting.</title>
   <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
   <!--
   <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
@@ -192,17 +192,12 @@
             Each address now represent a pot.
             Among three pots per game only one can win as bets are for the regular time soccer game only (90 minutes + extra time).
             Soccer game can end with: home win, guest win or draw.
-            The house (Peerbet) takes the Peercoins from both losing pots, deducts the 5% house fee and distributes the winnings proportionally to input to all the bettors in the winning pool.
+            The house (Peerbet) takes the Peercoins from both losing pots, deducts the 5% house fee and distributes the resulting balance proportionally to input to all the bettors in the winning pool.
             Users from the winning pot can expect the winning to be distributed within 4h after the regular time of the game has ended.
             Payment will be sent to the address of the largest input of the bet transaction.
             Bets are accepted as long as they are included in the block that is issued before the game starts.
-            All the bets that came after will be returned to sender but with five times the fee (0.05). Make sure you own the keys of the address you use, do not use the exchanges.
+            All the bets that came after will be returned to sender but with five times the fee (0.05).
             There is no minimum or maximum bet size.
-          </p>
-          <h4 class="ui header">We are working on</h4>
-          <p>
-            We are working on showing the current bets in page and in realtime.
-            Unfortunately the Peercoin block explorers API's have issues to decently return the balances.
           </p>
           <h4 class="ui header">Terms of Service</h4>
           <p>
