--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
             The house (Peerbet) takes the Peercoins from both losing pots, deducts the 5% house fee and distributes the resulting balance proportionally to input to all the bettors in the winning pool.
             Users from the winning pot can expect the winning to be distributed within 16h after the regular time of the game has ended.
             Payment will be sent to the address of the largest input of the bet transaction.
-            Bets are accepted as long as they are included in the block that is issued before the game starts.
-            All the bets that came after will be returned to sender but with five times the fee (0.05).
+            Bets are accepted as long as they are sent before the game starts. Bets that come too late into the game will be returned to sender after house deducts 1.01 Peercoin fee.
             There is no minimum or maximum bet size.
           </p>
           <h4 class="ui header">Terms of Service</h4>
