--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
         <div class="sixteen wide column">
           <h4 class="ui header">How it works</h4>
           <p>
+            This service requires no account or registration in any form, your Peercoin address is your account and txid of the bet is your receipt.
             Users place their bets by sending Peercoins to appropriate address.
-            Each address now represent a pot.
+            Each address now represents a pot.
             Among three pots per game only one can win as bets are for the regular time soccer game only (90 minutes + extra time).
             Soccer game can end with: home win, guest win or draw.
             The house (Peerbet) takes the Peercoins from both losing pots, deducts the 5% house fee and distributes the resulting balance proportionally to input to all the bettors in the winning pool.
